--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ dependencies = [
     "beautifulsoup4==4.13.4",
     "google-generativeai==0.8.5",
     "ultralytics==8.3.135",
-    "setuptools>=69.0.0"
+    "setuptools>=69.0.0",
+    "gunicorn==21.2.0",
+    "waitress==3.0.2",
+
     
 ]
 
