--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "google-generativeai==0.8.5",
     "ultralytics==8.3.135",
     "setuptools>=69.0.0",
-    "gunicorn==21.2.0",
+    "gunicorn>=21.2.0",
     "waitress==3.0.2",
 
     
