--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "gunicorn>=21.2.0",
     "waitress==3.0.2",
     "tenacity==9.1.2",
-    "lxml==4.6.5",
+    "lxml>=4.6.5",
 
     
 ]
