--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "waitress==3.0.2",
     "tenacity==9.1.2",
     "lxml==5.4.0",
-    "pika==1.3.2"
+    "aio-pika==9.5.5",
 
     
 ]
