--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,16 +17,14 @@ services:
     networks:
       - app-network
 
-  app:
-    build:
-      context: .
-      dockerfile: nikiconluxury/super-scraper:v4.1.5
-    ports:
-      - "8007:8080"  # Application port: host 8007 -> container 8080
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-    environment:
+    app:
+      image: nikiconluxury/super-scraper:v4.1.5
+      ports:
+        - "8007:8080"
+      depends_on:
+        rabbitmq:
+          condition: service_healthy
+      environment:
       - RABBITMQ_HOST=rabbit
       - RABBITMQ_USER=app_user
       - RABBITMQ_PASSWORD=app_password
