--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - app-network
 
   app:
-    image: nikiconluxury/super-scraper:v4.1.5
+    image: nikiconluxury/super-scraper:latest
     ports:
       - "8007:8080"
     depends_on:
